# turnstyle

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  app.py  requirements.txt
docs/: composition_and_activation_routing.md  function_vectors.md  sandbox.md
examples/: arithmetic_demo.py
experiments/: README.md  accumulator_fix_experiment.py  affect_crosslingual_audit.py  atom_crossmodel.py  autoprobe_lib_scan.py  autoprobe_scan.py  bbh_eval_colab.ipynb  bbh_no_regex.py  bio_span_probe.py  bitnet_probe.py  blog_bbh_figs.py  blog_swollm_mascot.py  boundary_agreement.py  boundary_substrate.py  boundary_test.py  boundary_xling_agreement.py  build_frame_library.py  calibrate_date_hybrid.py  calibrate_mc_probes.py  calibrate_router.py  calibrate_subjectivity.py  calibration_dyf_leaf.py  capability_dyf_router.py  capability_dyf_router_results.md  capability_extend_cache.py  capability_probe.py  capability_probe_phase0.md  capability_probe_phase1.md  capability_probe_phase2.md  color_affect_frame.py  color_channels.py  color_crosslingual.py  color_dimensionality.py  common.py  comparison_ordering_ir_eval.py  concept_geometry.py  confusion_spectrum.py  conversation_state_prototype.py  cross_language.py  cross_task_q2.py  (+179 more)
src/turnstyle/: __init__.py  bbh.py  (+42 more)
tests/: test_colored_objects.py  test_comparison_solver.py  test_core.py  test_dispatch_ordering.py  test_extract.py  test_extraction_diag.py  test_formal_fallacies.py  test_frame_library.py  test_frame_ordering.py  test_geometric_shapes.py  test_ir.py  test_item4_solvers.py  test_marginalize.py  test_marker_normalize.py  test_number_theory.py  test_parsers.py  test_perturb.py  test_polarity.py  test_probe.py  test_profile.py  test_proofs.py  test_route.py  test_sandbox_backend.py  test_sandbox_integration.py  test_sandbox_parser.py  test_selection_augment.py  test_semantic_frame.py  test_sql.py  test_sweep.py  test_zeroshot_floor.py
(+13 files in other folders)
