[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turnstyle"
version = "0.3.0"
description = "⊢ Symbolic coprocessors for LLM generation — ground model outputs in exact computation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Justin Donaldson" }]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest",
]
sandbox = ["wasmtime>=42.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/turnstyle"]
